* Sat Jul 28 2007 Jesse Keating <jkeating@redhat.com>
- Split the createrepo call into it's own function
- When raising an error, print the error too.

* Tue Jul 24 2007 Jesse Keating <jkeating@redhat.com>
- Add a few more desktopy things to manifest
- Rename f7 files to f8; set up config files for f8test1

* Fri Jul 20 2007 Jesse Keating <jkeating@redhat.com>
- Don't quote things passed to mkisofs, not a shell
- Always log stdout before checking for stderr output

* Fri Jul 06 2007 Jesse Keating <jkeating@redhat.com>
- Include memtest86+ in the "Fedora" manifest

* Tue Jun 19 2007 Jesse Keating <jkeating@redhat.com>
- Only grab the newest of deps.

* Wed Jun 13 2007 Jesse Keating <jkeating@redhat.com>
- Don't use flavor for a log file if no flavor set (Trac #48)
- Point to the right manifest file in pungi.conf

* Mon Jun 11 2007 Jesse Keating <jkeating@redhat.com>
- Add a install target to make (Trac #37)
- Enable the source repo in yum configs (Trac #47)
- Use universal newlines in getting process output (Trac #44)
- Fix logging of broken deps (Trac #39)

* Fri May 25 2007 Jesse Keating <jkeating@redhat.com>
- Handle the cdsize variable correctly
- More fixes for cached download stuff
- Fix default CD size storing

* Thu May 24 2007 Jesse Keating <jkeating@redhat.com>
- Use a package checksum to verify cached download
- Use the right flavor in the Everything configs

* Wed May 23 2007 Jesse Keating <jkeating@redhat.com>
- Commit config files used for producing Fedora 7
- Default pungi.conf file to using Fedora 7 stuff

* Tue May 15 2007 Jesse Keating <jkeating@redhat.com>
- Don't quote ISO label, not running mkisofs in shell
- Apply sparc patches (spot)
- Fix cached downloads comparing correctly
- Shorten 'development' to 'devel' in default config, more space for mkisofs
- Handle config file missing better (jgranado)

* Fri Apr 06 2007 Jesse Keating <jkeating@redhat.com>
- Fix comments in config file

* Mon Apr 02 2007 Jesse Keating <jkeating@redhat.com>