@@ -1,7 +1,7 @@
 %{!?python_sitelib: %define python_sitelib %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib()")}
 
 Name:           pungi
-Version:        0.4.0
+Version:        0.4.1
 Release:        1%{?dist}
 Summary:        Distribution compose tool
 
@@ -46,6 +46,9 @@ rm -rf $RPM_BUILD_ROOT
 
 
 %changelog
+* Wed Aug 01 2007 Jesse Keating <jkeating@redhat.com> - 0.4.1-1
+- Create a new yum object for source downloads as yum
+
 * Sat Jul 28 2007 Jesse Keating <jkeating@redhat.com> - 0.4.0-1
 - split createrepo call to it's own function.  This enables rawhide
   composes to happen once again. Also breaks API.
