@@ -335,23 +335,30 @@ class Gather(yum.YumBase):
 
         srpmpolist = []
 
-        # Work around for yum bug
-        for sack in self.pkgSack.sacks.values():
-            sack.added = {}
-            sack.excludes = {}
+        ## Work around for yum bug
+        #for sack in self.pkgSack.sacks.values():
+        #    sack.added = {}
+        #    sack.excludes = {}
 
-        self.pkgSack.excludes = {}
+        #self.pkgSack.excludes = {}
 
-        # We need to reset the yum object
-        self.pkgSack = None
+        ## We need to reset the yum object
+        #self.pkgSack = None
 
-        # Setup the sack with just src arch
-        self.doSackSetup(archlist=['src'])
+        ## Setup the sack with just src arch
+        #self.doSackSetup(archlist=['src'])
+
+        # Make a new yum object
+        ayum = yum.YumBase()
+        ayum.doConfigSetup(fn=self.config.get('default', 'yumconf'), debuglevel=6, errorlevel=6, root=os.path.join(self.workdir, 'yumroot'))
+        ayum.doRepoSetup()
+
+        ayum._getSacks(archlist=['src'])
 
         for srpm in self.srpmlist:
             (sname, sver, srel) = srpm.rsplit('-', 2)
             try:
-                srpmpo = self.pkgSack.searchNevra(name=sname, ver=sver, rel=srel)[0]
+                srpmpo = ayum.pkgSack.searchNevra(name=sname, ver=sver, rel=srel)[0]
                 if not srpmpo in srpmpolist:
                     srpmpolist.append(srpmpo)
             except IndexError:
@@ -366,7 +373,7 @@ class Gather(yum.YumBase):
             os.makedirs(pkgdir)
 
         for pkg in srpmpolist:
-            repo = self.repos.getRepo(pkg.repoid)
+            repo = ayum.repos.getRepo(pkg.repoid)
             remote = pkg.relativepath
             local = os.path.basename(remote)
             local = os.path.join(self.config.get('default', 'cachedir'), local)
